--- a/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi/appsettings.json
+++ b/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi/appsettings.json
@@ -6,7 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  //"UB": "Data Source=120.78.135.154;initial catalog=xf.ub.dev.test;persist security info=True;user id=sa;password=dbb;"
-  "UB": "Data Source=.;initial catalog=xf.ub.dev.test;persist security info=True;user id=sa;password=owl;"
+  "UB": "Data Source=120.78.135.154;initial catalog=xf.ub.dev.test;persist security info=True;user id=sa;password=dbb;"
   } 
 }
