--- a/Owl.UniverseBag.WebApi/Owl.UniverseBag.Domain/Owl.UniverseBag.Domain.csproj
+++ b/Owl.UniverseBag.WebApi/Owl.UniverseBag.Domain/Owl.UniverseBag.Domain.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20180603060755_initcreate.cs" />
+    <Compile Remove="Migrations\20180603062849_user.uniquecode.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
   </ItemGroup>
 
