--- a/Owl.UniverseBag.WebApi/Owl.UniverseBag.Application/Owl.UniverseBag.Application.csproj
+++ b/Owl.UniverseBag.WebApi/Owl.UniverseBag.Application/Owl.UniverseBag.Application.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Owl.UniverseBag.WebApi.DTO\Owl.UniverseBag.Application.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
