--- a/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi.csproj
+++ b/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi.csproj
@@ -16,12 +16,19 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Owl.UniverseBag.Application\Owl.UniverseBag.Application.csproj" />
     <ProjectReference Include="..\Owl.UniverseBag.Domain\Owl.UniverseBag.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
