--- a/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi/nlog.config
+++ b/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi/nlog.config
@@ -10,13 +10,13 @@
 
     <!--write logs to file-->
     <target xsi:type="File" name="allfile" fileName="logs/${shortdate}-all.log"
-            layout="${uppercase:${level}}|${longdate}|${basedir}|${logger}|${callsite}|${message}|${exception}" />
+            layout="${longdate}|${uppercase:${level}}|${logger}|${callsite}|${message}|${exception}" />
 
     <target xsi:type="File" name="ownFile-web" fileName="logs/${shortdate}-own.log"
-            layout="${uppercase:${level}}|${longdate}|${logger}|${message}|${exception}" />
+            layout="${longdate}|${uppercase:${level}}|${logger}|${callsite}|${message}|${exception}" />
 
     <target xsi:type="File" name="errorfile" fileName="logs/${shortdate}-error.log"
-            layout="${uppercase:${level}}|${longdate}|${logger}|${callsite}|${message}|${exception}" />
+            layout="${longdate}|${uppercase:${level}}|${logger}|${callsite}|${message}|${exception}" />
 
     <target xsi:type="Null" name="blackhole" />
 
@@ -26,12 +26,11 @@
     <!--All logs, including from Microsoft-->
     <logger name="*" minlevel="Trace" writeTo="allfile" />
 
+    <logger name="*" levels="Error,Fatal" writeTo="errorfile" />
     <!--Skip Microsoft logs and so log only own logs-->
     <logger name="Microsoft.*" minlevel="Trace" writeTo="blackhole" final="true" />
     <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
     
-    <logger name="*" levels="Error,Fatal" writeTo="errorfile" />
-
   </rules>
 </nlog>
 
