--- a/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi.DTO/Owl.UniverseBag.Application.DTO.csproj
+++ b/Owl.UniverseBag.WebApi/Owl.UniverseBag.WebApi.DTO/Owl.UniverseBag.Application.DTO.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="7.6.0" />
+  </ItemGroup>
+
 </Project>
