--- a/Owl.UniverseBag.WebApi/Owl.UniverseBag.Core/Owl.UniverseBag.Core.csproj
+++ b/Owl.UniverseBag.WebApi/Owl.UniverseBag.Core/Owl.UniverseBag.Core.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="3.7.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.2.2" />
+  </ItemGroup>
+
 </Project>
